<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="startQuiz"
        android:text="@string/startQuiz" />

    <CheckBox
        android:id="@+id/isMazeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/quizTypes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/mazeed" />

    <CheckBox
        android:id="@+id/isMujarrad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/isMazeed"
        android:layout_alignLeft="@+id/isMazeed"
        android:text="@string/mujarrad" />

    <Spinner
        android:id="@+id/quizTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/isMazeed"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:entries="@array/quizTypes_labels" />

</RelativeLayout>
