<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity" >

    <TextView
        android:id="@+id/selectedQuiz"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/selected_quiz"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/question"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectedQuiz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="none|textMultiLine" />

    <EditText
        android:id="@+id/answer"
        android:focusable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/question"
        android:layout_below="@+id/question"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/showAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="47dp"
        android:onClick="showAnswer"
        android:text="@string/show_answer" />

    <Button
        android:id="@+id/nextQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_alignBaseline="@+id/showAnswer"
        android:layout_alignBottom="@+id/showAnswer"
        android:layout_toRightOf="@+id/showAnswer"
        android:onClick="nextQuestion"
        android:text="@string/next_question" />

</RelativeLayout>
